# pdh-json-updater

./: .gitignore  .pylintrc  Makefile  README.md  add_set.py  file_handler.py  full_run_notes.md  json_card.py  last_update.json  last_update_metadata.json  legality.py  pauper-commander.json  pauper_commander.json  pyproject.toml  scryfall_fetcher.py  smoke_test.py  test_suite.json  update_card.py  update_json.py
.github/workflows/: run_pr_ci.yaml  weekly_update.yaml
pdh_json_updater/: add_set.py  file_handler.py  json_card.py  legality.py  scryfall_fetcher.py  smoke_test.py  update_card.py  update_json.py
tests/: test_smoke.py
