[tool.poetry]
name = "pdh-json-updater"
version = "0.1.0"
description = "Python scripts for updating the JSON file of all legal cards in the MTG PDH format"
authors = ["Chev Eldrid"]

[tool.poetry.scripts]
update-card = "pdh_json_updater.update_card:main"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.27.1"
jsonpickle = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pylint = "^2.12.2"
mypy = "^0.931"
types-requests = "^2.27.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
