[tool.poetry]
name = "pdh-json-updater"
version = "0.1.0"
description = "Python scripts for updating the JSON file of all legal cards in the MTG PDH format"
authors = ["Chev Eldrid"]

[tool.poetry.scripts]
update-card = "pdh_json_updater.update_card:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
requests = "^2.27.1"
jsonpickle = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pylint = "^3.0.0"
mypy = "^1.7.0"
types-requests = "^2.31.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
